# open-race-coach

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  DECISIONS.md  SPEC_v0.1.md  crt_dashboard_rewrite_spec.md  crt_terminal_text.html  index.html  live-simulator-validation.md  oldschool_driver_debrief.html
docs/reference/: README.md
plans/: 001-durable-debrief-board-import-export.md  002-add-tile-structure-editing.md  003-clarify-source-refresh-and-formatters.md  004-harden-editor-focus-and-mobile-shell.md  005-crt-terminal-visual-system.md  README.md
schema/: analysis_yaml.md  coach_response.md  corner_segments.md  lap_record.md  selected_delta.md  session_yaml.md  tick.md
scripts/: analyze.py  capture_acc_fixture.py  capture_ams2_fixture.py  record.py  validate_ams2.py  validate_session.py
simcoach/: __init__.py
simcoach/adapters/: __init__.py  ac.py  acc.py  ams2.py  base.py
simcoach/analysis/: __init__.py  confidence.py  deltas.py  run.py  segmentation.py
simcoach/coach/: __init__.py  coach.py  prompt.py
simcoach/ingest/: __init__.py  recorder.py  session.py
tests/: docs_index_browser_test.mjs  test_adapters.py  test_analysis.py  test_capture_acc_fixture.py  test_capture_ams2_fixture.py  test_cli.py  test_coach.py  test_deltas.py  test_docs_index_html.py  test_inspectable_analysis_output.py  test_logging.py  test_raw_fixtures.py  test_recorder.py  test_schema_contracts.py  test_segmentation.py  test_session.py  test_validate_ams2.py  test_validate_session.py
(+3 files in other folders)
