[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-race-coach"
version = "0.1.0"
description = "Local-first post-session sim-racing telemetry coach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "openai>=1.0",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "pyyaml>=6.0",
  "ulid-py>=1.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["simcoach"]
